# virt-db

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-linux.yml  build-musl.yml  build-windows.yml  build.yml  ci.yml  create-release.yml
admin/: .env.sample  Cargo.toml  Dockerfile  actix.toml  readme.txt
admin/app/src/apps/system/service/: server_info.rs  sys_menu.rs
admin/config/: config.toml.sample
admin/configs/: Cargo.toml
admin/migration/data/m20220101_000001_create_table/: obj_sys_menu.sql
admin/src/: main.rs  sys_log.rs
admin/src/config/: app_config.rs
admin/src/controller/: cache_config_controller.rs  index_controller.rs  metric_history_controller.rs  mock_controller.rs  mod.rs  user_controller.rs  vt_node_controller.rs
admin/src/entity/: cache_config.rs  metric_history.rs  mod.rs  prelude.rs  sys_user.rs
admin/src/error/: mod.rs
admin/src/job/: mod.rs  vt_node_job.rs
admin/src/model/: cache_config_model.rs  metric.rs  mod.rs  user_model.rs  vt_model.rs
admin/src/utils/: jwt.rs  mod.rs  orm.rs  password.rs
assistant/: Cargo.toml
dashboard/: Cargo.toml
dashboard/dashboard-api/: Cargo.toml  README.md
dashboard/dashboard-api/src/: main.rs
dashboard/src/: main.rs
mysql-protocol/: Cargo.toml
mysql-proxy-rs/: Cargo.toml
mysql-proxy-rs/examples/: passthrough.rs  proxy.rs
mysql-proxy-rs/src/: lib.rs  packet_writer.rs  params.rs  resultset.rs  writers.rs
opensrv-mysql/examples/: serve_auth.rs  serve_one.rs
server/: Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml
server/src/: conv.rs  main.rs  meta.rs  metrics.rs  mysql_protocol.rs  serde.rs  server.rs  sys_assistant_client.rs  sys_config.rs  sys_error.rs  sys_job.rs  sys_log.rs  sys_metrics.rs  sys_redis.rs  utils.rs
server/src/math/: avg.rs  mod.rs
server/src/protocol/: mod.rs  packet_reader.rs  packet_writer.rs
server/src/serve/: mod.rs
server/src/utils/: mod.rs  sys_datetime.rs  sys_path.rs  sys_sql.rs
server/tests/: serde.rs  tests.rs
sql/: schema.sql
