[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-settings = "0.6.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql","sqlx-macros","chrono"] }
mysql = "23.0.1"
anyhow = "1.0"

log = "*"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"