[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "0.9.0"

async-trait = "0.1.52"
byteorder = "1.4.3"
chrono = "0.4.19"
mysql_common = { version = "0.29.0", features = ["chrono"] }
nom = "7.1.0"
tokio = { version = "1.17.0", features = ["full"] }
opensrv-mysql = "0.3.0"
mysql_async = "0.30.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }

clap = {version="3.2.14",features = [ "derive" ]}

slab = "0.4.7"
sqlparser = "0.18.0"
redis = { version = "0.17.0", features = ["tokio-comp"] }
serde = {version="1.0.140",features = ["derive"],default-features = false}
serde_json = "1.0"

metrics = "0.20.1"
metrics-exporter-prometheus = {version="0.11.0",features = ["http-listener"] }
quanta = "0.10.1"
metrics-util = "0.14.0"
rand = "0.8.5"

async-once-cell = "0.4.2"

serde_derive = "1.0.152"
toml = "0.5.10"