[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
test-log = { version = "0.2.11", features = ["log"] }
env_logger = "*"

[dependencies]
log = "*"
log4rs = { version = "1.2.0", features = ["all_components"] }

byteorder = "1.4.3"
chrono = "0.4.19"
nom = "7.1.0"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.1"
mysql = "23.0.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "mysql" ] }

clap = {version="3.2.14",features = [ "derive" ]}

slab = "0.4.7"
sqlparser = "0.18.0"
redis = { version = "0.17.0", features = ["tokio-comp","r2d2","tokio","cluster"] }
serde = {version="1.0.140",features = ["derive"],default-features = false}
serde_json = "1.0"

once_cell = "1.17.0"

serde_derive = "1.0.152"
toml = "0.5.10"
anyhow = "1.0.68"
sha1 = "0.10.5"

reqwest = { version = "0.11", features = ["json","blocking"] }
itertools = "0.10.5"